# izkur

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
src/izkur/: __init__.py  cli.py
src/izkur/api/: __init__.py  app.py
src/izkur/assets/: __init__.py  case_types_abbreviations.py  court_abbreviations.py  court_seats.py  decisions_collections.py  footnotes_abbreviations.py  internal_provisions.py  legislation_collections.py
src/izkur/cli/: __init__.py  app.py  main.py  utils.py
src/izkur/client/: __init__.py  base.py
src/izkur/config/: __init__.py  config.ini  config.py
src/izkur/errors/: __init__.py  base.py  handler.py
src/izkur/helpers/: __init__.py  cli_utils.py  utils.py
src/izkur/models/: __init__.py  article.py  base.py  book.py  case_law.py  classes.py  other.py  statue.py
src/izkur/parser/: __init__.py  base.py  nodes.py  parser.py
src/izkur/symbols/: __init__.py  base.py  loaders.py  symbol_table.py
src/izkur/tokenizer/: __init__.py  tokenizer.py
tests/: __init__.py  test_izkur_02.py  test_izkur_18.py
