[project]
name = "izkur"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Dardasaba", email = "almatsuy@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
izkur = "izkur.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "loguru>=0.7.3",
    "typer>=0.16.0",
]
